serd (0.32.5) unstable; urgency=medium

  * Avoid over-use of yielding meson options
  * Drop graphs when writing Turtle output
  * Fix handling of bad predicates in anonymous blank nodes
  * Fix handling of some invalid EOF cases in lax mode
  * Fix indentation of named objects after anonymous objects
  * Fix indentation when ending anonymous nodes with many objects
  * Fix invalid characters in error messages
  * Fix reading numbers with no space before the final dot
  * Fix reading prefix names that start with "true." or "false."
  * Refuse to write incoherent statements
  * Remove project and version number from man page OS field
  * Write a blank line between statements and Turtle/TriG directives

 -- David Robillard <d@drobilla.net>  Mon, 18 Aug 2025 16:09:21 +0000

serd (0.32.4) stable; urgency=medium

  * Clean up enum declarations
  * Fix library current_version on MacOS
  * Fix overly permissive parsing of syntax names on the command line
  * Fix parsing NQuads lines with no space before the final dot
  * Fix reading chunks from files without trailing newlines
  * Fix rewriting special literals when datatype URIs are prefixed names
  * Gracefully handle errors while writing the end of anonymous nodes
  * Improve test suite coverage
  * Simplify some character classification and comparison code
  * Support reading lone lists in lax mode
  * Treat out of range unicode characters as errors
  * Write blank lines between graphs and statements in TriG

 -- David Robillard <d@drobilla.net>  Sun, 19 Jan 2025 00:17:58 +0000

serd (0.32.2) stable; urgency=medium

  * Enable clang nullability checks
  * Fix writing empty list objects within blank nodes

 -- David Robillard <d@drobilla.net>  Tue, 23 Jan 2024 19:32:21 +0000

serd (0.32.0) stable; urgency=medium

  * Add Windows path separator support to serd_node_new_file_uri()
  * Add long "help" and "version" options to serdi
  * Add options to disable html or singlehtml documentation