@@ -2,6 +2,7 @@ serd (0.32.5) unstable; urgency=medium
 
   * Avoid over-use of yielding meson options
   * Drop graphs when writing Turtle output
+  * Eliminate recursion in the writer
   * Fix handling of bad predicates in anonymous blank nodes
   * Fix handling of some invalid EOF cases in lax mode
   * Fix indentation of named objects after anonymous objects
@@ -13,7 +14,7 @@ serd (0.32.5) unstable; urgency=medium
   * Remove project and version number from man page OS field
   * Write a blank line between statements and Turtle/TriG directives
 
- -- David Robillard <d@drobilla.net>  Mon, 18 Aug 2025 16:09:21 +0000
+ -- David Robillard <d@drobilla.net>  Wed, 03 Sep 2025 15:53:12 +0000
 
 serd (0.32.4) stable; urgency=medium
 
